Minor spacing fix for teaser block (#67)

--- a/src/theme/blocks/_grid.scss
+++ b/src/theme/blocks/_grid.scss
@@ -43,6 +43,14 @@
 
 .grid-block-teaser {
   padding-top: 0 !important;
+  .headline {
+    padding-top: 1.5rem !important;
+  }
+  .grid-teaser-item .content {
+    h2 {
+      margin-bottom: 0 !important;
+    }
+  }
 }
 
 .grid-block-image {
